Fix bug #68446 (bug with constant defaults and type hints)